<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln_khai_niem"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="#ed4cd1b0"
                android:elevation="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8.5"
                    android:text="Khai niệm và quy tắc"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:padding="8dp"
                    android:src="@drawable/down" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_khai_niem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac7" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac10" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac11" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac13" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac14" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac15" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac17" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/khai_niem_quy_tac18" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_he_thong"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="#ed4cd1b0"
                android:elevation="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8.5"
                    android:text="Hệ thống biển báo"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:padding="8dp"
                    android:src="@drawable/down" />
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/tv_he_thong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/he_thong"
                    android:visibility="visible" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/he_thong1"
                    android:visibility="visible" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/he_thong2"
                    android:visibility="visible" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ln_sa_hinh"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="#ed4cd1b0"
                android:elevation="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8.5"
                    android:text="Sa hình"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:padding="8dp"
                    android:src="@drawable/down" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_sa_hinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa_hinh" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa_hinh1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa_hinh2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa_hinh3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa_hinh4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa_hinh5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa_hinh6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sa_hinh7" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>